@@ -1,4 +1,12 @@
 =======================================================
+network-manager-applet-1.8.22
+Overview of changes since network-manager-applet-1.8.20
+=======================================================
+
+* Add EXPERIMENTAL libnma-gtk4 library for use with GTK4.
+  Not recommended for production use.
+
+=======================================================
 network-manager-applet-1.8.20
 Overview of changes since network-manager-applet-1.8.18
 =======================================================
